unpackaged/main/default/objects/Account/fields/Onboarding_Required__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Onboarding Required</label>
    <type>Checkbox</type>
</CustomField>