unpackaged/main/default/objects/Account/fields/Tickbox__c.field-meta.xml
<CustomField>
    <fullName>Tickbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tickbox</label>
    <type>Checkbox</type>
</CustomField>